--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
-logs
-project/project
-project/target
-target
-tmp
-.history
-dist
-/.idea
-/*.iml
-/out
-/.idea_modules
+# Eclipse
 /.classpath
 /.project
-/RUNNING_PID
 /.settings
+
+#IntelliJ
+/.idea
+/*.iml
+/.idea_modules
+/out/
+
+#SBT
+target/
+.history
+
+#Play
+.target/
+/tmp/
+/logs/
+/dist/
